--- a/identity_oauth2_server/views/login.html
+++ b/identity_oauth2_server/views/login.html
@@ -13,7 +13,7 @@
 		  </div>
 		  <div class="checkbox">
 		    <label>
-		      <input type="checkbox"> 记住我
+		      <input type="checkbox" name="autoLogin"> 记住我
 		    </label>
 		  </div>
 		  <button type="submit" class="btn btn-default">登录</button>
